changing to audrey's for my daughter

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="top">Weather Dashboard</h1>
+    <h1 id="top">Audrey's Weather Dashboard</h1>
 
     <div id="container">
         <div id="left-panel">
